@@ -1,6 +1,6 @@
 package org.jabref.gui.importer.actions;
 
-import java.util.Collections;
+import java.util.List;
 
 import org.jabref.gui.DialogService;
 import org.jabref.logic.importer.ParserResult;
@@ -24,17 +24,14 @@ public class GitLegacyMetadataMigrationActionTest {
     void setUp() {
         migrationAction = new GitLegacyMetadataMigrationAction();
 
-        metaData = new MetaData();
         parserResult = new ParserResult(new BibDatabase());
-        parserResult.getDatabaseContext().setMetaData(metaData);
+        metaData = parserResult.getMetaData();
     }
 
     @Test
     void actionIsNecessaryWhenLegacyKeyIsPresent() {
-        // Give the metadata the old legacy key
-        metaData.putUnknownMetaDataItem(MetaData.LEGACY_GIT_ENABLED, Collections.singletonList("true"));
+        metaData.putUnknownMetaDataItem(MetaData.LEGACY_GIT_ENABLED, List.of("true"));
 
-        // Check that the migration flags itself as necessary
         assertTrue(migrationAction.isActionNecessary(parserResult, mock(DialogService.class), mock(CliPreferences.class)));
     }
 
@@ -47,13 +44,13 @@ public class GitLegacyMetadataMigrationActionTest {
     @Test
     void performActionMigratesKeysAndRemovesLegacyKey() {
         // Setup the old state
-        metaData.putUnknownMetaDataItem(MetaData.LEGACY_GIT_ENABLED, Collections.singletonList("true"));
+        metaData.putUnknownMetaDataItem(MetaData.LEGACY_GIT_ENABLED, List.of("true"));
 
         // Run the migration
         migrationAction.performAction(parserResult, mock(DialogService.class), mock(CliPreferences.class));
 
         // Verify the old key was deleted
-        assertFalse(metaData.getUnknownMetaData().containsKey(MetaData.LEGACY_GIT_ENABLED));
+        assertFalse(migrationAction.isActionNecessary(parserResult, mock(DialogService.class), mock(CliPreferences.class)));
 
         // Verify the new separate keys were turned on
         assertTrue(metaData.isGitAutoPullEnabled());
